After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701425 - locale dir is not initialized when bindtextdomain() is called
locale dir is not initialized when bindtextdomain() is called
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-01 13:39 UTC by Jiro Matsuzawa
Modified: 2013-06-02 00:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Init directories before bindtextdomain() (970 bytes, patch)
2013-06-01 13:39 UTC, Jiro Matsuzawa
accepted-commit_now Details | Review
Init directories before bindtextdomain() (970 bytes, patch)
2013-06-02 00:10 UTC, Jiro Matsuzawa
none Details | Review

Description Jiro Matsuzawa 2013-06-01 13:39:02 UTC
bindtextdomain() is called before gedit_locale_dir is initialized. So gedit does not respect the locale direcotry specified in configure. It seems that we need to call gedit_dirs_init() before bindtextdomain().
Comment 1 Jiro Matsuzawa 2013-06-01 13:39:04 UTC
Created attachment 245824 [details] [review]
Init directories before bindtextdomain()
Comment 2 Ignacio Casal Quinteiro (nacho) 2013-06-01 15:32:13 UTC
Review of attachment 245824 [details] [review]:

Find with me.
Comment 3 Jiro Matsuzawa 2013-06-02 00:10:19 UTC
The following fix has been pushed:
bc145d8 Init directories before bindtextdomain()
Comment 4 Jiro Matsuzawa 2013-06-02 00:10:23 UTC
Created attachment 245843 [details] [review]
Init directories before bindtextdomain()