Init directories before bindtextdomain()

https://bugzilla.gnome.org/show_bug.cgi?id=701425